# Rock_Scissors_Paper_YAGNI

./: README.md  pyproject.toml
rock_scissors_paper/: play.py
